# microservices

./: README.md  docker-compose.yaml
django_service/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
django_service/api/: urls.py
django_service/django_service/: asgi.py  settings.py  urls.py  wsgi.py
django_service/kafka_app/: __init__.py  kafka_producer.py
django_service/products/: urls.py  views.py
django_service/redis_app/: redis_adapter.py
fastapi_service/: Dockerfile  __init__.py  alembic.ini  depends.py  entrypoint.sh  main.py  pyproject.toml  requirements.txt
fastapi_service/adapters/: __init__.py  items.py
fastapi_service/adapters/database/: database.py  mapping.py  tables.py
fastapi_service/adapters/depends/: product_depends.py
fastapi_service/adapters/kafka_app/: kafka_consumer.py  kafka_utils.py
fastapi_service/adapters/logging/: logger.py
fastapi_service/adapters/redis_app/: redis_utils.py
fastapi_service/adapters/routs/: settings.py
fastapi_service/application/: __init__.py  items.py
fastapi_service/application/dataclass/: product.py
fastapi_service/application/dataclasses/: dataclasses.py
fastapi_service/composites/: depends.py
fastapi_service/database/: database.py
fastapi_service/depends/: __init__.py  depends_repositories.py  depends_services.py
fastapi_service/migrations/: env.py
fastapi_service/routing/: items.py  main.py  routs.py
fastapi_service/schemas/: __init__.py  items.py  product_schemas.py
fastapi_service/tests/: conftest.py
redisdata/: dump.rdb
(+13 files in other folders)
