[tool.poetry]
name = "django_service"
version = "0.1.0"
description = "Проект на django"
authors = ["Алексей Кольцов <koltsov2022@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.8.1"
Django = "3.2.16"
django-cors-headers = "3.13.0"
django-redis = "5.4.0"
djangorestframework = "3.12.4"
drf-yasg = "1.21.10"
inflection = "0.5.1"
gunicorn = "20.1.0"
kafka-python = "2.2.11"
packaging = "25.0"
pre-commit = "3.6.2"
psycopg2-binary = "2.9.10"
python-dotenv = "1.1.0"
pytz = "2025.2"
PyYAML = "6.0.2"
redis = "6.2.0"
sqlparse = "0.5.3"
uritemplate = "4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

extend-exclude = [
    "django_service/django_service/*.py",
    "**/settings.py",
    "**/migrations/*",
    "**/django_service/api/urls.py/",
    "**/pytest.ini",
    "**/README.md",
    "**apps.py",
]

force-exclude = true
[tool.ruff.lint]
preview = true
select = [
    "B",  # black
    "E", # pycodestyle error
    "W", # pycodestyle warning
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
]
fixable = ["F401", "D400", "F541"]
ignore = ["E203", "I001", "N999", "E501", "F841"]

[pytest.ini_options]
pythonpath = ["."]